# mela-browser

./: Makefile  com.rutinerad.recept.plist  pyproject.toml
src/mela_browser/: __main__.py  server.py
src/mela_browser/routes/: image.py  list.py  melarecipe.py  recipe.py
src/mela_browser/templates/: AGENTS.md  base.pug  list.pug  recipe.pug
